simple request + response, basic visualization

--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,18 @@
     <!-- CSS -->
     <link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <style>
-#codes {
+#source_code {
     font-family: monospace;
+}
+/* http://bl.ocks.org/mbostock/4062045 GNU GPL v3, Mike Bostock */
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
 }
     </style>
 </head>
@@ -23,7 +33,7 @@
         <div class="col-sm-8 col-sm-offset-2">
             <form id="form">
                 <div class="form-group">
-                    <textarea id="codes" class="form-control" rows="5"></textarea>
+                    <textarea id="source_code" class="form-control" rows="5"></textarea>
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
@@ -40,9 +50,81 @@
     </footer>
     <script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
     <script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="//d3js.org/d3.v3.min.js"></script>
     <script>
     $(document).ready(function () {
+        $("#form").submit(function (e) {
+            e.preventDefault();
+            $.ajax({
+                url: "api",
+                data: {
+                    source_code: $("#source_code").val()
+                },
+                dataType: "json",
+                method: "POST",
+                success: function (data) {
+                    $("#output").text(JSON.stringify(data));
+                    drawD3(data);
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    console.error(jqXHR);
+                    console.error(textStatus);
+                    console.error(errorThrown);
+                    $("#output").text(textStatus);
+                }
+            });
+        });
         
+        function drawD3(graph) {
+            var width = 960,
+                height = 500;
+
+            var color = d3.scale.category20();
+
+            var force = d3.layout.force()
+                .charge(-120)
+                .linkDistance(30)
+                .size([width, height]);
+
+            var svg = d3.select("#output").append("svg")
+                .attr("width", width)
+                .attr("height", height);
+
+            force
+                .nodes(graph.nodes)
+                .links(graph.links)
+                .start();
+
+            var link = svg.selectAll(".link")
+                .data(graph.links)
+                .enter().append("line")
+                .attr("class", "link")
+                .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+
+            var node = svg.selectAll(".node")
+                .data(graph.nodes)
+                .enter().append("circle")
+                .attr("class", "node")
+                .attr("r", 5)
+                .style("fill", function(d) { return color(d.group); })
+                .call(force.drag);
+
+            node.append("title")
+                .text(function(d) { return d.name; });
+
+            force.on("tick", function() {
+                link.attr("x1", function(d) { return d.source.x; })
+                    .attr("y1", function(d) { return d.source.y; })
+                    .attr("x2", function(d) { return d.target.x; })
+                    .attr("y2", function(d) { return d.target.y; });
+
+                node.attr("cx", function(d) { return d.x; })
+                    .attr("cy", function(d) { return d.y; });
+            });
+        }
+        
+
+
     });
     
     </script>
