--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>aba-web</title>
     <!-- CSS -->
-    <link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.jsdelivr.net/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <style>
 #source_code {
     font-family: monospace;
@@ -100,9 +100,9 @@ contrary(b, p).
             &copy; 2016 - Kenrick
         </div>
     </footer>
-    <script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-    <script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="//cdn.jsdelivr.net/d3js/3.5.17/d3.min.js"></script>
     <script>
         // http://bl.ocks.org/mbostock/4062045
         // http://bl.ocks.org/mbostock/2706022
