--- a/templates/index.html
+++ b/templates/index.html
@@ -123,6 +123,8 @@ a |- r.
 b |- s.
 contrary(a, s).
 contrary(b, p).
+c |- d.
+assumption(c).
                     </textarea>
                     <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
                 </form>
