--- a/templates/index.html
+++ b/templates/index.html
@@ -318,8 +318,9 @@ assumption(c).
             var color = d3.scale.category20();
 
             var force = d3.layout.force()
-                .charge(-300)
-                .linkDistance(100)
+                .gravity(.1)
+                .charge(-350)
+                .linkDistance(80)
                 .size([width, height]);
                 
             var tip = d3.tip()
@@ -389,7 +390,19 @@ assumption(c).
                 .attr("dy", ".35em")
                 .text(function(d) { return 'text_label' in d ? d.text_label : d.id; });
 
-            force.on("tick", function() {
+            force.on("tick", function(e) {
+                var k = 6 * e.alpha;
+                graph.links.forEach(function(d, i) {
+                    d.source.y -= k;
+                    d.target.y += k;
+                });
+                // link.attr("x1", function(d) { return d.source.x; })
+                //     .attr("y1", function(d) { return d.source.y; })
+                //     .attr("x2", function(d) { return d.target.x; })
+                //     .attr("y2", function(d) { return d.target.y; });
+
+                node.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+
                 link.attr("d", function(d) {
                     var dx = d.target.x - d.source.x,
                         dy = d.target.y - d.source.y,
@@ -402,8 +415,8 @@ assumption(c).
                         d.target.y;
                 });
                 
-                node
-                    .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
+                // node
+                //     .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
                 
             });
         }
