--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,7 @@ assumption(c).
                             add_tab_dt(key, data.dispute_trees);
                         }
                     }
-                    
+                    $("#parse-errors").html("");
                     if (data.parse_errors.length > 0) {
                         $("#parse-errors").html(data.parse_errors.join("<br/>"))
                     }
