--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@ assumption(c).
             &copy; 2016 - Kenrick
         </div>
     </footer>
-    <script src="//cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
+    <script src="//cdn.jsdelivr.net/jquery/2.2.4/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="//cdn.jsdelivr.net/d3js/3.5.17/d3.min.js"></script>
     <script src="//cdn.jsdelivr.net/codemirror/4.5.0/codemirror.min.js"></script>
@@ -193,6 +193,12 @@ assumption(c).
                 dataType: "json",
                 method: "POST",
                 success: function (data) {
+
+                    if (data.hasOwnProperty('errors')) {
+                        $("#parse-errors").text(data.errors);
+                        return false;
+                    }
+
                     $("#tab-output").addClass("in");
                     $("#tab-output").height("auto");
                     
