--- a/templates/index.html
+++ b/templates/index.html
@@ -125,6 +125,7 @@ contrary(a, s).
 contrary(b, p).
 c |- d.
 assumption(c).
+contrary(c, r).
                     </textarea>
                     <button type="submit" class="btn btn-default" id="form-submit">Submit</button>
                 </form>
